--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,3 +31,10 @@
     transform: rotate(360deg);
   }
 }
+
+.username-field {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  /* box-sizing: border-box; */
+}
